[package]
name = "teledrop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
confy = "0.5.1"
dirs = "4.0.0"
mime_guess = "2.0.4"
reqwest = { version = "0.11.14", features = ["blocking", "json", "multipart", "stream"] }
# reqwest = { version = "0.11.4", features = ["blocking", "json", "multipart", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
spinners = "4.1.0"
