[package]
name = "teledrop"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
confy = "0.5.1"
dirs = "4.0.0"
mime_guess = "2.0.4"
reqwest = { version = "0.11.4", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0"
spinners = "4.1.0"
indicatif = "0.17.3"

tokio = { version = "1.26.0", features = ["full"] }
tokio-stream = "0.1.12"
tokio-util = { version = "0.7.7", features = ["codec"] }
futures = "0.3"
